--- a/src-pwa/manifest.json
+++ b/src-pwa/manifest.json
@@ -1,7 +1,11 @@
 {
+  "name": "App Mindex",
+  "short_name": "App  Mindex",
+  "description": "Proyecto para la gestion de SSO",
+  "display": "standalone",
   "orientation": "portrait",
   "background_color": "#ffffff",
-  "theme_color": "#027be3",
+  "theme_color": "#051E41",
   "icons": [
     {
       "src": "icons/icon-128x128.png",
