--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
     "vue"
   ],
   "typescript.tsdk": "node_modules/typescript/lib",
-  // "[vue]": {
-  //   "editor.defaultFormatter": "esbenp.prettier-vscode"
-  // }
+  "[vue]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
